--- a/public/resources/css/lading.css
+++ b/public/resources/css/lading.css
@@ -2,6 +2,9 @@
     margin: 0;
     font-family: 'Montserrat', sans-serif;
 }
+ul{
+    list-style-type: none;
+}
 
 .container-flex{
     width: 1200px;
@@ -9,15 +12,253 @@
 }
 
 .menu{
-    background-color: #FFF;
+    /* background-color: #FFF; */
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    opacity: 1;
     padding: 20px 0;
-    height: 85px;
+    height: 100%;
     width: 100%;
-    border-color: #FFF;
+    /* border: 1px solid #00000029; */
 }
 
 .menu .container-flex{
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+.logo{
+    background: url("/resources/images/logo.svg") no-repeat;
+    margin: 18px 162px 14px 140px;
+    width: 155px;
+    height: 52px;
+}
+.main{
+    background: url("/resources/images/austin-distel-wawEfYdpkag-unsplash.png") no-repeat;
+    height: 975px;
+    opacity: 1;
+    margin-top: 14px;
+}
+.main .txt{
+    margin: 242px 0px 0px 140px ;
+    width: 745px;
+    height: 263px;
+    text-align: left;
+    font: Bold 85px/80px Montserrat;
+    color: #FFFFFF;
+    opacity: 1;
+}
+.main .txt-second{
+    margin: 10px 0px 22px 140px ;
+    width: 536px;
+    height: 140px;
+    font: normal 26px Montserrat;
+    color: #FFFFFF;
+    opacity: 1;
+}
+.btn-green{
+    margin: 10px 0px 15px 140px;
+    width: 348px;
+    height: 60px;
+    background: #28AD47 0% 0% no-repeat padding-box;
+    border-radius: 37px;
+    border: 1px solid #28AD47;
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: bold;
+}
+
+.txt-third{
+    margin: 15px 0px 173px 140px;
+    font: normal 19px Montserrat;
+    color: #FFF;
+    text-align: left;
+    width: 376px;
+    height: 50px;
+}
+.banner{
+    background: #F7F7F7 0% 0% no-repeat padding-box;
+    height: 192px;
+}
+.banner .container-flex{
+    display: flex;
+    flex-direction: row;
+}
+.txt-banner-first{
+    /* margin: 38px 76px 61px 394px; */
+    text-align: center;
+    font: Bold 35px Montserrat;
+    color: #676767;
+    margin-top: 38px;
+    margin-bottom: 61px;
+}
+.txt-banner-second{
+    color: #525252;
+    text-align: left;
+    font: normal 26px Montserrat;
+    margin: 38px 0px 61px 76px;
+}
+.second{
+    background-color: #FFF;
+    /* height: 192px; */
+}
+.second-txt-first{
+    margin-top: 75px;
+    color: #676767;
+    text-align: center;
+    font: Bold 35px/50px Montserrat;
+}
+.second-txt-second{
+    margin-top: 27px;
+    color: #676767;
+    text-align: center;
+    font: normal 26px Montserrat;
+}
+.info{
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    margin: 44px 100px 76px 100px;
+}
+.img-1{
+    background: url("/resources/images/Group-9.svg") no-repeat;
+    width: 120px;
+    height: 98px;
+}
+.img-2{
+    background: url("/resources/images/Group-8.svg") no-repeat;
+    width: 124px;
+    height: 98px;
+}
+.img-3{
+    background: url("/resources/images/Group-55.svg") no-repeat;
+    width: 120px;
+    height: 98px;
+}
+.img-4{
+    background: url("/resources/images/Group-14.svg") no-repeat;
+    width: 122px;
+    height: 98px;
+}
+.info-txt{
+    width: 13em;
+    word-wrap: break-word;
+    text-align: left;
+    font: normal 22px Montserrat;
+    color: #525252;
+    margin-left: 10px;
+    margin-top: 10px;
+}
+.third{
+    height: 994px;
+    background-color: #F7F7F7;
+}
+.third-txt{
+    margin-top: 53px;
+    text-align: center;
+    font: Bold 35px Montserrat;
+    color: #676767;
+    margin-bottom: 30px;
+}
+.img-5{
+    background: url("/resources/images/v-img-1.svg") no-repeat;
+    width: 493px;
+    height: 319px;
+}
+.img-6{
+    background: url("/resources/images/v-img-2.svg") no-repeat;
+    width: 493px;
+    height: 319px;
+}
+.img-7{
+    background: url("/resources/images/p-1.png") no-repeat;
+    width: 55px;
+    height: 55px;
+}
+.third-txt-img{
+    color: #676767;
+    font: Bold 28px Montserrat;
+}
+.third-txt-img-2{
+    color: #7B7B7B;
+    font: normal 26px Montserrat;
+}
+.content-txt{
+    margin: 70px 0px 0px 0px;
+}
+.btn-green-2{
+    margin-top: 15px;
+    width: 121px;
+    height: 25px;
+    background: #28AD47 0% 0% no-repeat padding-box;
+    border-radius: 37px;
+    border: 1px solid #28AD47;
+
+}
+.button-txt{
+    color: #FFFFFF;
+    text-align: center;
+    font-weight: bold;
+    font-size: 13px;
+}
+.third-content-second{
+    margin: 90px 0px 0px 0px;
+}
+.bedroom{
+    height: 4502px;
+    background-color: #FFF;
+}
+.bedroom-txt-title{
+    text-align: center;
+    font: Bold 35px/50px Montserrat;
+    color: #676767;
+    margin: 76px 0px 56px 0px;
+}
+.bedroom-card{
+    background-color: #FFF;
+    box-shadow: 0px 3px 6px #00000029;
+    width: 812px;
+    height: 339px;
+}
+.info-2{
+    display: flex;
+    flex-direction: row;
+    flex-grow: 1;
+    margin: 20px 0px 0px 35px;
+}
+
+
+
+@media (max-width: 420px){
+    .logo{
+        background: url("/resources/images/logo-small-2.svg") no-repeat;
+        /* margin-left: 140px; */
+        width: 50px;
+        height: 50px;
+        margin: 120px 0px 30px 100px;
+    }
+
+    .menu .container-flex{
+        flex-direction: column;
+        align-items: initial;
+        text-align: center;
+        color: #000;
+    }
+    .txt-banner-first{
+        /* margin: 38px 76px 61px 394px; */
+        text-align: center;
+        font: Bold 35px Montserrat;
+        color: #676767;
+        /* margin-top: 38px;
+        margin-bottom: 61px; */
+    }
+    .txt-banner-second{
+        color: #525252;
+        text-align: left;
+        font: normal 26px Montserrat;
+        /* margin: 38px 0px 61px 76px; */
+    }
+    .banner .container-flex{
+        display: flex;
+        flex-direction: column;
+    }
 }
